--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -21,6 +21,12 @@
     <main class="container">
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
+      <div class="bannerPortfolio">
+        <h1>Fullstack Developer</h1>
+        <p>I code and that's already nice</p>
+        <img src="image/avatar-bis.png" alt="avatar">
+      </div>
+
       <section class="introduction">
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
