premier critere js

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -24,7 +24,7 @@
       <div class="bannerPortfolio">
         <h1>Fullstack Developer</h1>
         <p>I code and that's already nice</p>
-        <img src="image/avatar-bis.png" alt="avatar">
+        <img id="avatar" src="image/avatar-bis.png" alt="avatar">
       </div>
 
       <section class="introduction">
